Version 3.4.3 (2011-??-??)
	Added plugin dependency support.  Will autoload plugins specified as a dependency if they haven't been loaded.
	Fixed bug where the autolink plugin didn't work with non-English keyboards when pressing ).
	Added possibility to change properties of all table cells in a column.
	Added external_image_list option to get images list from user-defined variable or function.
	Fixed bug where the autoresize plugin wouldn't reduce the editors height on Chrome.
	Fixed bug where table size inputs were to small for values with size units.
	Fixed bug where table cell/row size input values were not validated.
	Fixed bug where menu item line-height would be set to wrong value by external styles.
	Fixed bug where hasUndo() would return wrong answer.
	Fixed bug where page title would be set to undefined by fullpage plugin.
	Fixed bug where HTML5 video properties were not updated in embedded media settings.
	Fixed bug where HTML comment on the first line would cause an error.
	Fixed bug where spellchecker menu was positioned incorrectly on IE.
	Fixed bug where breaking out of list elements on WebKit would produce a DIV instead of P after the list.
	Fixed bug where pasting from Word in IE9 would add extra BR elements when text was word wrapped.
	Fixed bug where numeric entities with leading zeros would produce incorrect decoding.
	Fixed bug where hexadecimal entities wasn't properly decoded.
	Fixed bug where bookmarks wasn't properly stored/restored on undo/redo.
	Fixed bug where the mceInsertCommand didn't retain the values of links if they contained non url contents.
	Fixed bug where the valid_styles option wouldn't be properly used on styles for specific elements.
	Fixed so contentEditable is used for the body of the editor if it's supported.
	Fixed performance issue with mceInsertCommand and inserting very simple contents.
	Fixed performance issue with older IE version and huge documents by optimizing the forced root blocks logic.