@@ -1,4 +1,5 @@
 Version 3.4.3 (2011-??-??)
+	Added new 'allow_html_in_named_anchor' option to allow html to occur within a named anchor tag.  Use at own risk.
 	Added plugin dependency support.  Will autoload plugins specified as a dependency if they haven't been loaded.
 	Fixed bug where the autolink plugin didn't work with non-English keyboards when pressing ).
 	Added possibility to change properties of all table cells in a column.
